# RedTeam

./: .env.example  .gitignore  .gitmodules  .markdownlint.json  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README.md  SECURITY.md  __init__.py  command.txt  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  versions.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  challenge_issue.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: 1.bump-version.yml  2.build-publish.yml  2.create-release.yml  3.update-changelog.yml
1.validator/: index.html
2.miner/: index.html
3.1/: 404.html  index.html  sitemap.xml  tags.json
3.1/challenges/: index.html
3.1/manuals/: docker.md.bak
3.1/miner/: index.html  miner.md.bak
3.1/release-notes/: index.html
3.1/search/: search_index.json
3.1/validator/: index.html
3.submission_guide/: index.html
4.0/: 404.html  index.html  sitemap.xml  tags.json
4.0/challenges/: index.html
4.0/miner/: index.html
4.0/release-notes/: index.html
4.0/search/: search_index.json
4.0/validator/: index.html
4.1/: 404.html  index.html  sitemap.xml  tags.json
4.1/challenges/: index.html
4.1/miner/: index.html
4.1/release-notes/: index.html
4.1/search/: search_index.json
4.1/validator/: index.html
4.3/: 404.html  index.html  sitemap.xml  tags.json
4.3/challenges/: index.html
4.3/miner/: index.html
4.3/release-notes/: index.html
4.3/search/: search_index.json
4.3/validator/: index.html
4.5/: 404.html  index.html  sitemap.xml  tags.json
4.6/: 404.html  index.html  sitemap.xml  tags.json
4.7/: 404.html  index.html  sitemap.xml  tags.json
4.docker/: index.html
4.validator_custom/: index.html
5.docker/: index.html
FAQ/: index.html
docs/: .nav.yml  README.md  release-notes.md  validator_custom.md
docs/about/: .nav.yml  (+5 more)
redteam_core/: __init__.py  constants.py
requirements/: requirements.build.txt  requirements.docs.txt
scripts/: bump-version.sh  changelog.sh  clean.sh  diagrams.sh  get-version.sh  release.sh  validator_auto_update.py
search/: search_index.json
tests/: test_config.py  test_protocol.py  test_redteam_core.py
(+874 files in other folders)
